[workspace]

[package]
name = "mtpdb_master"
version = "0.1.0"
edition = "2021"
description = "MTPDB Master Orchestrator — manages managers, provisions DB instances via API"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
ssh2 = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
